--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
     tools {nodejs "node-18"}
 
     environment {
-        GIT_BRANCH      = '*/main'
+        GIT_BRANCH      = 'main'
         GIT_REPO        = 'https://github.com/rickyhendrawan18/simple-apps.git'
         SONAR_HOST      = 'http://172.23.15.70:9000'
         SONAR_PROJECT   = 'simple-apps'
